Update README document.